--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
-            app:title="Navigation Drawer Demo"
+            app:title="Assignment 03 "
             app:titleTextColor="@color/cardview_light_background"
             android:background="@color/cardview_dark_background"
             />
