--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -85,4 +85,13 @@ tools:context=".Questions">
     android:layout_alignParentLeft="true"
     android:layout_alignParentStart="true" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="109dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="302dp"
+        android:text="TextView"
+        android:textSize="18sp" />
+
 </RelativeLayout>
